# ml-project-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TEMPLATE_UPDATES.md  copier.yml  mypy.ini  ruff.toml
scripts/: e2e_sanity.sh  (+2 more)
template/{{ project_slug }}/: README.md  README.md.j2  prefect.yaml  prefect.yaml.j2  pyproject.toml  pyproject.toml.j2
template/{{ project_slug }}/app_config/: data_sources.yaml
template/{{ project_slug }}/app_config/env/: dev.yaml  prod.yaml
template/{{ project_slug }}/app_config/policies/: thresholds.yaml
template/{{ project_slug }}/configs/: data_sources.yaml
template/{{ project_slug }}/configs/env/: dev.yaml  prod.yaml
template/{{ project_slug }}/configs/policies/: thresholds.yaml
template/{{ project_slug }}/data/: .gitignore
template/{{ project_slug }}/docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
template/{{ project_slug }}/lab/: README.md
template/{{ project_slug }}/lab/notebooks/: 00_setup_and_sanity.ipynb.j2  01_eda_baseline.ipynb.j2
template/{{ project_slug }}/registries/: README.md
template/{{ project_slug }}/scripts/: cli.py
template/{{ project_slug }}/src/{{ package_name }}/flows/: deploy.py  feature_build.py  ingest_validate.py  ingest_validate.py.j2  train_eval.py
template/{{ project_slug }}/src/{{ package_name }}/project_config/: __init__.py  settings.py
template/{{ project_slug }}/src/{{ package_name }}/tasks/evaluation/: __init__.py
template/{{ project_slug }}/src/{{ package_name }}/tasks/featurization/: __init__.py
template/{{ project_slug }}/tests/unit/: test_flows.py.j2
(+9 files in other folders)
